--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "postgres": "^3.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "reflect-metadata": "^0.2.2",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
+    "tsyringe": "^4.9.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
